--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "compression": "^1.7.1",
     "cors": "^2.8.5",
+    "lokijs": "^1.5.11",
     "polka": "next",
     "sirv": "^1.0.0"
   },
