--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "compression": "^1.7.1",
     "cors": "^2.8.5",
     "lokijs": "^1.5.11",
+    "moment": "^2.29.0",
     "polka": "next",
     "sirv": "^1.0.0"
   },
