--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "lokijs": "^1.5.11",
     "moment": "^2.29.0",
+    "multer": "^1.4.2",
     "polka": "next",
     "sirv": "^1.0.0"
   },
